[package]
name = "rustpanel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6.8", features = ["cors"] }
